fix navigation item wrapping

--- a/sass/_head.scss
+++ b/sass/_head.scss
@@ -13,7 +13,7 @@ nav.header-nav {
 		}
 	}
 
-	.navbar-link {
+	.nav-link {
 		white-space: nowrap;
 	}
 }
