--- a/static/css/main.css
+++ b/static/css/main.css
@@ -58,7 +58,7 @@ nav.header-nav {
     font-size: 19px;
     font-family: "Zilla Slab", slab, serif;
     font-weight: 800; }
-  nav.header-nav .navbar-link {
+  nav.header-nav .nav-link {
     white-space: nowrap; }
 
 div.area-header #main-title {
